# pypss

./: .buildinfo  .bumpversion.cfg  .coverage  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  adaptive_sampling.html  advanced_config.html  alerting.html  api.html  benchmarks.html  cli_usage.html  configuration.html  coverage_report.txt  dashboard.html  features.html  genindex.html  history_regression.html  index.html  installation.html  integrations.html  metrics_explained.html  ml_detection.html  objects.inv  plugins.html  py-modindex.html  pyproject.toml  pypss.toml  pypss_tuned.toml  quick_start.html  reports.html  requirements-dev.txt  requirements.txt  (+3 more)
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
_modules/: index.html
_modules/pypss/: storage.html
_sources/: adaptive_sampling.rst.txt  history_regression.rst.txt  index.rst.txt  installation.rst.txt  integrations.rst.txt  ml_detection.rst.txt  usage.rst.txt
docs/source/: advanced_config.rst  alerting.rst  alerts.rst  api.rst  async_ops.rst  benchmarks.rst  cli_usage.rst  collectors.rst  conf.py  configuration.rst  dashboard.rst  features.rst  index.rst  installation.rst  integrations.rst  metrics_explained.rst  plugins.rst  quick_start.rst  reports.rst  usage.rst
examples/: example_app.py
examples/complex_app/: complex_web_service.py  run_service.py
pypss/: __init__.py
pypss/alerts/: __init__.py  base.py  channels.py  engine.py  rules.py  state.py
pypss/board/: app.py  charts.py  data_loader.py
pypss/cli/: __init__.py  cli.py  discovery.py  html_report.py  reporting.py  runner.py  tuning.py  utils.py
pypss/core/: __init__.py  adaptive_sampler.py  advisor.py  context.py  core.py  error_rate_monitor.py  llm_advisor.py
pypss/instrumentation/: __init__.py  async_ops.py  background.py  collectors.py  instrumentation.py
pypss/integrations/: __init__.py  celery.py  fastapi.py  flask.py  kafka.py  otel.py  pytest_plugin.py  rq.py
pypss/ml/: __init__.py  detector.py
pypss/plugins/: __init__.py  base.py  loader.py  metrics.py  registry.py
pypss/protos/: trace.proto  trace_pb2.py  trace_pb2_grpc.py
pypss/storage/: __init__.py  base.py  prometheus.py  sqlite.py
pypss/tuning/: __init__.py  injector.py  optimizer.py  profiler.py  runtime.py
pypss/utils/: __init__.py  config.py  source_code.py  trace_utils.py  utils.py
scripts/: verify_and_regenerate.py
tests/: test_exports.py  test_pypss_init_coverage.py
tests/alerts/: test_alerting.py  test_rules.py
tests/benchmarks/: test_benchmark.py
tests/board/: test_data_loader.py
tests/cli/: test_cli.py  test_discovery.py  test_history.py  test_html_report.py  test_main_entry_point.py  test_new_cli_commands.py  test_reporting.py  test_runner.py  test_tuning_command.py
tests/core/: test_adaptive_sampler.py  test_advisor.py  test_core.py  test_error_rate_monitor.py  test_llm_advisor.py  test_plugins.py  test_protos.py  test_scoring_algorithms.py  test_streaming.py
tests/examples/: test_complex_app.py
(+50 files in other folders)
