[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypss"
version = "1.0.1"
description = "Python Program Stability Score"
keywords = ["stability", "metrics", "observability", "python", "pss"]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Saidatta Teja Ghanta", email = "dattateja44@gmail.com"}]
maintainers = [{name = "Saidatta Teja Ghanta", email = "dattateja44@gmail.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Benchmark",
    "Typing :: Typed",
]
dependencies = [
    "click",
    "tomli>=2.0.0; python_version < '3.11'",
    "toml",
    "ijson>=3.2.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.80.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",

    "bump2version>=1.0.1",
    "types-PyYAML>=6.0.0",
    "types-toml>=0.10.0",
    "types-requests>=2.30.0",
    "pandas-stubs>=2.0.0",
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
    "flask>=3.0.0",
    "celery>=5.0.0",
    "rq>=1.0.0",
]

monitoring = [
    "prometheus-client>=0.17.0",
]

otel = [
    "opentelemetry-api>=1.0.0",
    "opentelemetry-sdk>=1.0.0",
]

llm = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
]

dashboard = [
    "nicegui>=1.4.0",
    "plotly>=5.0.0",
    "pandas>=2.0.0",
]

docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
]

[project.scripts]
pypss = "pypss.cli:main"
pypss-board = "pypss.board.app:main"

[project.urls]
"Homepage" = "https://github.com/Be-Wagile-India/pypss"
"PyPI" = "https://pypi.org/project/pypss/"
"Source" = "https://github.com/Be-Wagile-India/pypss"
"Changelog" = "https://github.com/Be-Wagile-India/pypss/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["pypss", "pypss.*"]

[tool.hypothesis.profiles.ci]
max_examples = 50
deadline = 1000  # milliseconds

[tool.coverage.run]
branch = true
source = ["pypss"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2

[tool.mypy]
exclude = ["build", "examples"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "nicegui.*",
    "plotly.*",
    "rq.*",
    "opentelemetry.*",
    "flask.*",
    "starlette.*",
    "celery.*",
    "openai.*"
]
ignore_missing_imports = true
